tests/unary_ops/invalid/nested_missing_const.su
s32 main() {
    return !~;
}